2013-12-03  Niels Möller  <nisse@lysator.liu.se>

	* configure.ac (dummy-dep-files): Don't overwrite any existing
	dependency files.

	* x86_64/md5-compress.asm: New file, similar to the x86 version.
	35% speedup.

2013-11-25  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/testutils.c (test_dsa_sign, test_dsa_verify): New
	functions, supporting arbitrary digest size.

	* testsuite/testutils.h (ASSERT): Improved failure message.

	* dsa-verify.c (dsa_verify): Renamed, from _dsa_verify.
	* dsa-sign.c (dsa_sign): Renamed, from _dsa_sign.

2013-11-24  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/dsa-keygen-test.c (test_main): Test generating a
	key with 224-bit q.

	* dsa-verify.c (_dsa_verify): Use _dsa_hash.

	* dsa-sign.c (_dsa_sign): Use _dsa_hash. Fix memory leak in
	error case, spotted by Nikos.

	* dsa-keygen.c (dsa_generate_keypair): Allow q_bits == 224.

	* dsa-hash.c (_dsa_hash): New file and function. Allows digest
	sizes not matching the bitsize of q.
	* dsa.h (_dsa_hash): Declare it.
	* Makefile.in (hogweed_SOURCES): Added dsa-hash.c.

2013-11-23  Niels Möller  <nisse@lysator.liu.se>

	* configure.ac: Check also for openssl/ecdsa.h.

2013-10-05  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.in (nettle_SOURCES): Added eax.c.
	(HEADERS): Added eax.h.

	* testsuite/Makefile.in (TS_NETTLE_SOURCES): Added eax-test.c.

	* testsuite/eax-test.c: New file.

	* nettle-internal.c (nettle_eax_aes128): New aead algorithm.
	(eax_aes128_set_key, eax_aes128_set_nonce, eax_aes128_update)
	(eax_aes128_encrypt, eax_aes128_decrypt, eax_aes128_digest): New
	functions.

	* eax.c: New file.
	* eax.h: New file.

	* aes.h: Fixed type in name mangling for new aes functions.

2013-09-28  Niels Möller  <nisse@lysator.liu.se>

	* Merge aes-reorg branch. Changes below,
	dated 2013-05-17 - 2013-08-13.

2013-08-13  Niels Möller  <nisse@lysator.liu.se>

	* yarrow.h (struct yarrow256_ctx): Use aes256_ctx, not aes_ctx.
	* yarrow256.c: Adapted to use new aes256 interface.
