@@ -1,10 +1,13 @@
 2013-12-03  Niels Möller  <nisse@lysator.liu.se>
 
+	* x86_64/sha1-compress.asm: Reorganized, to get closer to the x86
+	version. No difference in running time (benchmarked on ADM E-350).
+
 	* configure.ac (dummy-dep-files): Don't overwrite any existing
 	dependency files.
 
 	* x86_64/md5-compress.asm: New file, similar to the x86 version.
-	35% speedup.
+	35% speedup (benchmarked on ADM E-350).
 
 2013-11-25  Niels Möller  <nisse@lysator.liu.se>
 
